# drf-nested-routers

./: .gitignore  .travis.yml  CHANGELOG.md  Complement.md  LICENSE  MANIFEST.in  README.md  README.rst  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-tox.txt  requirements.txt  runtests.py  setup.cfg  setup.py  test_main.py  tox.ini
.github/workflows/: bump-version.yml  main.yml  publish-to-pypi.yml  release-and-testpypi.yml  release.yml
docs/: index.md
drf-nested-routers/: .gitignore  LICENSE  MANIFEST.in  setup.py
rest_framework_nested/: __init__.py  relations.py  routers.py  serializers.py  viewsets.py
rest_framework_nested/api/: router.py  tests.py  views.py  viewset.py
rest_framework_nested/api/utils/: auth_utils.py  datetime.py  exceptions.py  log.py  operator.py  parser.py  tokenTab.py  v_utils.py
rest_framework_nested/runtests/: runcoverage.py  runtests.py  settings.py  urls.py
rest_framework_nested/tests/: test_hyperlinkedserializers.py  test_relations_hyperlink.py  test_routers.py
src/rest_framework_nested/: __init__.py  relations.py  routers.py
src/rest_framework_nested/runtests/: runtests.py
src/rest_framework_nested/tests/: test_routers.py
src/tests/: conftest.py  description.py  test_dynamic_routers.py  test_hyperlinkedserializers.py  test_relations_hyperlink.py  test_routers.py  tests.py
src/tests/testapp/: models.py
tests/: conftest.py  description.py  models.py  nested_router.out  test_dummy.py  test_dynamic_routers.py  test_hyperlinkedserializers.py  test_relations.py  test_routers.py  test_simple.py  test_viewsets.py  urls.py
tests/helpers/: __init__.py
tests/serializers/: models.py  test_serializers.py  urls.py
